Criação do formulário (Campos, botão Logar e link para cadastrar)

--- a/frontend/assets/login.html
+++ b/frontend/assets/login.html
@@ -8,5 +8,47 @@
 </head>
 <body>
   
+  <div>
+    <div>
+
+      <h1> FAÇA SEU LOGIN </h1>
+
+      <!-- Campo Usuário -->
+      <div>
+
+        <label id="userLabel" for="user">Usuário</label>
+        <input type="text" id="user" placeholder="Seu usuário cadastrado" required>
+
+      </div>
+
+      <!-- Campo E-mail -->
+      <div>
+
+        <label id="emailLabel" for="email">E-mail</label>
+        <input type="emailLabel" id="email" placeholder="Seu email cadastrado" required>
+
+      </div>
+
+      <!-- Campo Senha -->
+      <div>
+
+        <label id="senhaLabel" for="senha">Senha</label>
+        <input type="password" id="senha" placeholder="Senha do usuário cadastrado" required>
+        <i aria-hidden="true"></i>
+
+      </div>
+      
+      <div>
+        <button onclick="entrar()"><span>Logar</span></button>
+      </div>
+
+      <p>Não tem Cadastro?
+        <a href=""> Cadastre-se</a>
+      </p>
+
+    </div>
+  </div>
+
+<script src=""></script>
 </body>
 </html>
