Adicionado class dentro do botão no codigo html

--- a/frontend/assets/login.html
+++ b/frontend/assets/login.html
@@ -38,8 +38,8 @@
 
       </div>
       
-      <div>
-        <button onclick="entrar()"><span>Logar</span></button>
+      <div class="justify-center wrap">
+        <button class="btn custom-btn" onclick="entrar()"><span>Logar</span></button>
       </div>
 
       <p>Não tem Cadastro?
